# ocrorchestrator

./: .gitignore  Dockerfile  README.md  entrypoint.sh  notes.md  pyproject.toml
assets/: repo.txt
dummy_data/fs/my-bucket/configs/: config_v2.yaml
dummy_data/fs/my-bucket/prompts/: general.txt
dummy_data/fs/outputs/extraction/: dummyguid.json
dummy_data/fs/outputs/gsextraction/: Screenshot 2023-08-14 210150.json  variational-inference-i.json
local/fs/my-bucket/configs/: config_v1.yaml
local/fs/my-bucket/models/: export.pkl
notebooks/: api.ipynb  exp.ipynb
src/ocrorchestrator/: __init__.py  deps.py  main.py  routers.py  ui.py
src/ocrorchestrator/artifacts/: __init__.py  base.py
src/ocrorchestrator/config/: app_config.py
src/ocrorchestrator/datamodels/: api_io.py
src/ocrorchestrator/managers/: artifact.py  processor.py  secrets.py
src/ocrorchestrator/processors/: __init__.py  api.py  base.py  custom.py  factory.py  gradio.py  llm.py  microservice.py  pytorch.py
src/ocrorchestrator/repos/: __init__.py  base.py  factory.py  gcs.py  local.py
src/ocrorchestrator/utils/: artifacts.py  constants.py  gcs.py  img.py  logging.py  misc.py  mixins.py  ml.py  timing.py
