[project]
name = "ocrorchestrator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ajkdrag", email = "altamashjahangirkhan123@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.5",
    "fastapi>=0.111.0",
    "structlog>=24.2.0",
    "gradio-client>=1.0.2",
    "torch>=2.0.0",
    "torchvision>=0.18.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"

[tool.pdm.scripts]
nb = "jupyter-lab --no-browser --ip=0.0.0.0 --port=8888 --NotebookApp.token=''"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=ocrorchestrator",
    "devtools>=0.12.2",
]
