[project]
name = "ocrorchestrator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ajkdrag", email = "altamashjahangirkhan123@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.5",
    "fastapi>=0.111.0",
    "structlog>=24.2.0",
    "torch>=2.0.0",
    "torchvision>=0.18.1",
    "langchain-google-vertexai>=1.0.4",
    "langchain>=0.2.1",
    "google-cloud-storage>=2.16.0",
    "kubernetes>=30.1.0",
    "PyMuPDF>=1.24.7",
    "gradio==3.50.2",
    "fastai>=2.7.16",
    "timm>=1.0.8",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"

[tool.pdm.scripts]
nb = "jupyter-lab --no-browser --ip=0.0.0.0 --port=8888 --NotebookApp.token=''"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=ocrorchestrator",
    "devtools>=0.12.2",
]
